# update-version

./: Cargo.toml  LICENSE  README.md
example/: tauri.conf.json
examples/: Cargo.toml  git_release.rs  increment_version.rs  package.json  tauri.conf.json  update_all_types.rs  update_cargo_toml.rs
src/: arguments.rs  git.rs  lib.rs  main.rs
src/parsers/: mod.rs  package_json_parser.rs  tauri_config_parser.rs  toml_parser.rs
tests/: git_integration.rs  parser_integration.rs
