[package]
name = "update-version"
version = "0.1.0-beta"
edition = "2024"

[[bin]]
name = "uv"
path = "src/main.rs"

[lib]
name = "update_version"
path = "src/lib.rs"


[dependencies]
anyhow = { version = "1.0.100" }
thiserror = "2.0.17"
pretty_env_logger = "0.5.0"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.53", features = ["default", "wrap_help", "derive"] }
regex = { version = "1.12.2", features = ["perf"] }
semver = { version = "1.0.27" }
walkdir = { version = "2.5.0" }
git2 = { version = "0.20.3" }
dirs = "6.0"