[package]
name = "update-version"
version = "1.0.3"
edition = "2024"
authors = ["Drew Chase"]
description = "A CLI tool for updating version numbers across multiple file types (Cargo.toml, package.json, tauri.conf.json) with git integration"
license = "MIT"
repository = "https://github.com/Drew-Chase/update-version"
homepage = "https://github.com/Drew-Chase/update-version"
readme = "README.md"
keywords = ["version", "semver", "cli", "cargo", "tauri"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "uv"
path = "src/main.rs"

[lib]
name = "update_version"
path = "src/lib.rs"


[dependencies]
anyhow = { version = "1.0.100" }
thiserror = "2.0.17"
pretty_env_logger = "0.5.0"
log = "0.4.29"
clap = { version = "4.5.53", features = ["default", "wrap_help", "derive"] }
regex = { version = "1.12.2", features = ["perf"] }
semver = { version = "1.0.27" }
ignore = { version = "0.4" }
git2 = { version = "0.20.3" }
dirs = "6.0"

[dev-dependencies]
tempfile = "3.20"