[package]
name = "ffnodes_client"
version="1.5.0-alpha"
description = ""
authors = ["Drew Chase"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffnodes_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ffnodes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
ffmpeg = {path="../../ffmpeg"}
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.24"
async-stream = "0.3"
futures-util = "0.3"
sysinfo = "0.30"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
hostname = "0.4"
dirs = "5.0"
which = "6.0"
rand = "0.8"
base64 = "0.22"
urlencoding = "2.1"
open = "5.0"
url = "2.5"
mac_address = "1.1"
sha2 = "0.10"
self_update = {version = "0.42.0", features = ["archive-zip"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
